# openclaw

./: .env.example  .gh-cli-test.md  .gitignore  .oxfmtrc.jsonc  .oxlintrc.json  AGENT-DEPLOYMENT-PLAN.md  AGENTS.md  DEPLOYMENT-PLAN.md  INDEPENDENCE.md  MEMORY-RESTORATION-COMPLETION.md  MEMORY-RESTORATION-STATUS.md  README.md  REBUILD-PLAN.md  REORGANIZATION.md  TODO.md  docker-compose.yml  fly.toml  package.json  pnpm-lock.yaml  tsdown.config.ts  vitest.config.ts  vitest.e2e.config.ts
.agent/: AGENTS.md
.cursor/: chat-registry.md
.github/: pull_request_template.md
anythingllm-sync-output/: .index-state.json  _manifest.json
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/src/: lib.rs  main.rs
docs/: BRAND-IDENTITY.md  CLOUD-MEMORY-SYNC-BIDIRECTIONAL.md  CLOUD-MEMORY-SYNC-USAGE.md  PEER-REVIEW-REPORT.md  TULSBOT-CLOUD-MEMORY.md  TULSBOT-KNOWLEDGE-MIGRATION-GUIDE.md  TULSBOT-KNOWLEDGE-OPTIMIZATION.md  gh-cli-setup.md  phase4-integration-test-report.md
git-hooks/: pre-push
knowledge-slices/: agent-roster.md  automation-patterns.md  notion-schemas.md  workspace-architecture.md
scripts/: audit-channel-config.ts  bundle-a2ui.sh  check-channel-health.ts  com.openclaw.sync-brain-knowledge.plist  com.openclaw.sync-memory-watch.plist  complete-memory-restoration.sh  create-pr.sh  fix-pi-model-discovery-import.ts  force-memory-reindex.ts  generate-knowledge-index.ts  import-anythingllm-backup.ts  nlm-create-notebooks.sh  nlm-extract-tulsbot-knowledge.sh  nlm-seed-handbooks.sh  nlm-sync-codebase.sh  package-mac-app.sh  run-node.mjs  (+10 more)
(+506 files in other folders)
