[package]
name = "tulsbot-desktop"
version = "0.1.0"
edition = "2021"
description = "Tulsbot Desktop — thin Tauri shell over the OpenClaw Control UI"

[lib]
name = "tulsbot_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-png", "devtools"] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1", features = ["full"] }

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-autostart = "2"

[profile.release]
strip = true
lto = true
codegen-units = 1
opt-level = "s"
